[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/dialogic/Editor/CharacterEditor/PortraitEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Editor/CharacterEditor/CharacterEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Editor/Common/TLabel.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.23, 0.31, 1 )

[sub_resource type="Image" id=4]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 4
flags = 4
image = SubResource( 4 )
size = Vector2( 16, 16 )

[node name="CharacterEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorScroll" type="ScrollContainer" parent="Split"]
margin_right = 596.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="Editor" type="VBoxContainer" parent="Split/EditorScroll"]
margin_right = 596.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 11

[node name="Name" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_right = 596.0
margin_bottom = 24.0

[node name="TLabel" parent="Split/EditorScroll/Editor/Name" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Name: "
text_key = "Name: "

[node name="LineEdit" type="LineEdit" parent="Split/EditorScroll/Editor/Name"]
margin_left = 134.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="DisplayName" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 28.0
margin_right = 596.0
margin_bottom = 52.0
__meta__ = {
"_editor_description_": "Display name is the name that will
show up on the dialogs in game."
}

[node name="TLabel2" parent="Split/EditorScroll/Editor/DisplayName" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Display Name: "
text_key = "Display Name: "

[node name="CheckBox" type="CheckBox" parent="Split/EditorScroll/Editor/DisplayName"]
margin_left = 134.0
margin_right = 158.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Split/EditorScroll/Editor/DisplayName"]
visible = false
margin_left = 162.0
margin_right = 302.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="DisplayNickname" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 56.0
margin_right = 596.0
margin_bottom = 80.0
__meta__ = {
"_editor_description_": "Display name is the name that will
show up on the dialogs in game."
}

[node name="TLabel3" parent="Split/EditorScroll/Editor/DisplayNickname" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Nicknames: "
text_key = "Nicknames: "

[node name="CheckBox" type="CheckBox" parent="Split/EditorScroll/Editor/DisplayNickname"]
margin_left = 134.0
margin_right = 158.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Split/EditorScroll/Editor/DisplayNickname"]
visible = false
margin_left = 162.0
margin_right = 527.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Color" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 84.0
margin_right = 596.0
margin_bottom = 104.0

[node name="TLabel4" parent="Split/EditorScroll/Editor/Color" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 130.0
margin_bottom = 17.0
rect_min_size = Vector2( 130, 0 )
text = "Color: "
text_key = "Color: "

[node name="ColorPickerButton" type="ColorPickerButton" parent="Split/EditorScroll/Editor/Color"]
margin_left = 134.0
margin_right = 274.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 0 )
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="Description" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 108.0
margin_right = 596.0
margin_bottom = 158.0

[node name="TLabel5" parent="Split/EditorScroll/Editor/Description" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 130.0
margin_bottom = 14.0
rect_min_size = Vector2( 130, 0 )
size_flags_vertical = 0
text = "Description: "
text_key = "Description: "

[node name="TextEdit" type="TextEdit" parent="Split/EditorScroll/Editor/Description"]
margin_left = 134.0
margin_right = 596.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3

[node name="Separator" type="HSeparator" parent="Split/EditorScroll/Editor"]
margin_top = 162.0
margin_right = 596.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 10 )
custom_constants/separation = 18

[node name="Portraits" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 184.0
margin_right = 596.0
margin_bottom = 198.0

[node name="Title" parent="Split/EditorScroll/Editor/Portraits" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 596.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Portraits / Expressions"
align = 1
valign = 1
text_key = "Portraits / Expressions"

[node name="HBoxContainer" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 202.0
margin_right = 596.0
margin_bottom = 226.0

[node name="TLabel11" parent="Split/EditorScroll/Editor/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Scale"
text_key = "Scale"

[node name="Scale" type="SpinBox" parent="Split/EditorScroll/Editor/HBoxContainer"]
margin_left = 37.0
margin_right = 111.0
margin_bottom = 24.0
value = 100.0
allow_greater = true
align = 2
suffix = "%"

[node name="Spacer" type="Label" parent="Split/EditorScroll/Editor/HBoxContainer"]
margin_left = 115.0
margin_top = 5.0
margin_right = 147.0
margin_bottom = 19.0
text = "        "

[node name="TLabel12" parent="Split/EditorScroll/Editor/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 151.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 19.0
text = "Offset"
text_key = "Offset"

[node name="OffsetX" type="SpinBox" parent="Split/EditorScroll/Editor/HBoxContainer"]
margin_left = 194.0
margin_right = 294.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
allow_greater = true
allow_lesser = true
suffix = "X"

[node name="OffsetY" type="SpinBox" parent="Split/EditorScroll/Editor/HBoxContainer"]
margin_left = 298.0
margin_right = 398.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
allow_greater = true
allow_lesser = true
suffix = "Y"

[node name="MirrorOption" type="HBoxContainer" parent="Split/EditorScroll/Editor/HBoxContainer"]
margin_left = 402.0
margin_right = 527.0
margin_bottom = 24.0

[node name="MirrorPortraitsCheckBox" type="CheckBox" parent="Split/EditorScroll/Editor/HBoxContainer/MirrorOption"]
margin_right = 24.0
margin_bottom = 24.0

[node name="TLabel11" parent="Split/EditorScroll/Editor/HBoxContainer/MirrorOption" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Mirror portraits"
text_key = "Mirror portraits"

[node name="Labels" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
margin_top = 230.0
margin_right = 596.0
margin_bottom = 244.0

[node name="TLabel7" parent="Split/EditorScroll/Editor/Labels" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 38.0
margin_bottom = 14.0
text = "Name"
text_key = "Name"

[node name="TLabel8" parent="Split/EditorScroll/Editor/Labels" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_right = 70.0
margin_bottom = 14.0
text = "Path"
text_key = "Path"

[node name="ScrollContainer" type="ScrollContainer" parent="Split/EditorScroll/Editor"]
margin_top = 248.0
margin_right = 596.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Split/EditorScroll/Editor/ScrollContainer"]
margin_right = 596.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PortraitList" type="VBoxContainer" parent="Split/EditorScroll/Editor/ScrollContainer/VBoxContainer"]
margin_right = 596.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PortraitEntry" parent="Split/EditorScroll/Editor/ScrollContainer/VBoxContainer/PortraitList" instance=ExtResource( 1 )]
margin_right = 596.0

[node name="HBoxContainer" type="HBoxContainer" parent="Split/EditorScroll/Editor/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 596.0
margin_bottom = 50.0

[node name="NewPortrait" type="Button" parent="Split/EditorScroll/Editor/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 144.0
margin_bottom = 22.0
text = "  Add new portrait"
icon = SubResource( 3 )

[node name="ImportFromFolder" type="Button" parent="Split/EditorScroll/Editor/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 355.0
margin_bottom = 22.0
text = "  Import images from folder"
icon = SubResource( 3 )

[node name="FileName" type="HBoxContainer" parent="Split/EditorScroll/Editor"]
visible = false
margin_top = 625.0
margin_right = 527.0
margin_bottom = 649.0

[node name="TLabel9" parent="Split/EditorScroll/Editor/FileName" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
text = "File:"
text_key = "File:"

[node name="LineEdit" type="LineEdit" parent="Split/EditorScroll/Editor/FileName"]
margin_left = 31.0
margin_right = 527.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Preview" type="VBoxContainer" parent="Split"]
margin_left = 608.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="Background" type="Panel" parent="Split/Preview"]
margin_right = 416.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="FullTextureRect" type="TextureRect" parent="Split/Preview/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealSizedRect" type="TextureRect" parent="Split/Preview/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 275.0
margin_right = -30.0
margin_bottom = -30.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Split/Preview/Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = 26.0
text = "Full View"
items = [ "Full View", null, false, 0, null, "Actual Size", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TLabel10" parent="Split/Preview/Background" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 14.0
text = "Preview"
text_key = "Preview"

[connection signal="toggled" from="Split/EditorScroll/Editor/HBoxContainer/MirrorOption/MirrorPortraitsCheckBox" to="." method="_on_MirrorPortraitsCheckBox_toggled"]
[connection signal="item_selected" from="Split/Preview/Background/OptionButton" to="." method="_on_OptionButton_item_selected"]
